<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	xmlns:myapp="http://schemas.android.com/apk/res/com.softenido.tradertoolbox"
    android:id="@+id/riskmanagerLayout"
    android:baselineAligned="true"
    android:orientation="vertical"
	android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
        <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_equity" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_risk" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_limit" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_stop" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_target" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_ratio" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_slippage" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_comision" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_fee" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
                <TextView android:text="@string/trade_shares" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1"/>
                <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
